--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,41 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.4'
-	id 'io.spring.dependency-management' version '1.1.0'
+	// spring boot version 2.5.2
+	id 'org.springframework.boot' version '2.5.2'
+	id "io.spring.dependency-management" version "1.0.11.RELEASE"
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
+	// web mvc 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// 이 강의의 주제인 Security 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// 웹 페이지를 쉽게 생성하기 위해 thymeleaf 추가
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	// Thymeleaf에서 SpringSecurity를 Integration
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	// lombok
+	compileOnly 'org.projectlombok:lombok:1.18.20'
+	annotationProcessor 'org.projectlombok:lombok:1.18.20'
+	// spring data jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// h2
+	runtimeOnly 'com.h2database:h2'
+	// starter test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	// security test
+	testImplementation 'org.springframework.security:spring-security-test'
+	// junit test
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
 tasks.named('test') {
